--- a/page.html
+++ b/page.html
@@ -78,7 +78,7 @@
         <div class="container">
           <div class="row align-items-end">
             <div class="col-lg-12 text-center">
-              <h2 class="mb-0" >VISISTA2K25 CSE DEPARTMENT</h2>
+              <h2 class="mb-0" >VISISTA 2K25</h2>
               <p>EXAMPLE</p>
             </div>
           </div>
